@@ -5,8 +5,6 @@ import ipleiria.risk_matrix.dto.UserAnswersDTO;
 import ipleiria.risk_matrix.exceptions.exception.InvalidOptionException;
 import ipleiria.risk_matrix.exceptions.exception.NotFoundException;
 import ipleiria.risk_matrix.models.answers.Answer;
-import ipleiria.risk_matrix.models.questions.OptionLevel;
-import ipleiria.risk_matrix.models.questions.OptionLevelType;
 import ipleiria.risk_matrix.models.questions.Question;
 import ipleiria.risk_matrix.models.questions.QuestionOption;
 import ipleiria.risk_matrix.models.questions.Severity;
@@ -141,7 +139,7 @@ public class AnswerService {
                     throw new NotFoundException("Question not found for ID: " + ans.getQuestionId());
                 }
                 String categoryName = question.getCategory().getName();
-                answersByCategory.computeIfAbsent(categoryName, k -> new ArrayList<>()).add(ans);
+                answersByCategory.computeIfAbsent(categoryName, _ -> new ArrayList<>()).add(ans);
             }
 
             Map<String, Severity> severitiesByCategory = new HashMap<>();
@@ -182,16 +180,18 @@ public class AnswerService {
             String submissionId = entry.getKey();
             List<AnswerDTO> submissionAnswers = entry.getValue();
             // It is assumed that all answers in a submission share the same email.
-            String email = submissionAnswers.get(0).getEmail();
+            String email = submissionAnswers.getFirst().getEmail();
 
             Map<String, List<AnswerDTO>> answersByCategory = new HashMap<>();
             for (AnswerDTO ans : submissionAnswers) {
                 Question question = questionMap.get(ans.getQuestionId());
                 if (question == null) {
-                    throw new NotFoundException("Question not found for ID: " + ans.getQuestionId());
+                    // Log a warning and skip this answer if its question is missing
+                    System.err.println("Warning: Question not found for ID: " + ans.getQuestionId() + " while processing submission: " + submissionId);
+                    continue; // Skip processing this specific answer
                 }
                 String categoryName = question.getCategory().getName();
-                answersByCategory.computeIfAbsent(categoryName, k -> new ArrayList<>()).add(ans);
+                answersByCategory.computeIfAbsent(categoryName, _ -> new ArrayList<>()).add(ans);
             }
 
             Map<String, Severity> severitiesByCategory = new HashMap<>();
@@ -216,7 +216,7 @@ public class AnswerService {
         LocalDateTime end = LocalDate.parse(endDate).atTime(23, 59, 59);
         List<AnswerDTO> answersInRange = answerRepository.findByCreatedAtBetween(start, end).stream()
                 .map(AnswerDTO::new)
-                .collect(Collectors.toList());
+                .toList();
 
         if (answersInRange.isEmpty()) {
             return new ArrayList<>(); // Return empty list if no answers found in the range
@@ -244,7 +244,7 @@ public class AnswerService {
                 continue;
             }
             // Assume all answers in a submission share the same email
-            String email = submissionAnswers.get(0).getEmail();
+            String email = submissionAnswers.getFirst().getEmail();
 
             // Group answers by category for severity calculations
             Map<String, List<AnswerDTO>> answersByCategory = new HashMap<>();
@@ -253,11 +253,11 @@ public class AnswerService {
                  if (question == null) {
                     // Consider logging this issue or handling it differently
                     System.err.println("Warning: Question not found for ID: " + ans.getQuestionId() + " in submission: " + submissionId);
-                    continue; // Skip this answer if the question is missing
+                    continue; // Skip this answer if the question is missing due to being deleted.
                     // Or throw new NotFoundException("Question not found for ID: " + ans.getQuestionId());
                 }
                 String categoryName = question.getCategory().getName();
-                answersByCategory.computeIfAbsent(categoryName, k -> new ArrayList<>()).add(ans);
+                answersByCategory.computeIfAbsent(categoryName, _ -> new ArrayList<>()).add(ans);
             }
 
             // Compute severities for each category
